# aptos-core

./: Cargo.toml
aptos-move/aptos-vm/src/: aptos_vm.rs
aptos-move/framework/aptos-stdlib/doc/: table.md  (+1 more)
aptos-move/framework/src/: built_package.rs
aptos-node/: Cargo.toml
aptos-node/src/: lib.rs
config/src/config/: consensus_config.rs  mod.rs  quorum_store_config.rs
consensus/: Cargo.toml
consensus/consensus-types/: Cargo.toml
consensus/consensus-types/src/: block.rs  block_test_utils.rs  common.rs  executed_block.rs  request_response.rs
consensus/safety-rules/src/: fuzzing_utils.rs
consensus/src/: consensus_provider.rs  epoch_manager.rs  lib.rs  payload_manager.rs  state_computer.rs  state_replication.rs  txn_notifier.rs
consensus/src/block_storage/: block_store.rs
consensus/src/experimental/: ordering_state_computer.rs
consensus/src/liveness/: proposal_generator.rs
consensus/src/test_utils/: mock_payload_manager.rs  mock_state_computer.rs
consensus/src/twins/: twins_node.rs
execution/executor-test-helpers/: Cargo.toml
execution/executor-test-helpers/src/: lib.rs
execution/executor-types/: Cargo.toml
execution/executor-types/src/: executed_chunk.rs  lib.rs
execution/executor/src/: block_executor.rs
mempool/: Cargo.toml
mempool/src/: lib.rs  logging.rs
mempool/src/shared_mempool/: coordinator.rs  runtime.rs  tasks.rs  types.rs
mempool/src/tests/: mocks.rs  node.rs  shared_mempool_test.rs  test_framework.rs
quorom-store/: Cargo.toml
quorom-store/src/: counters.rs  lib.rs  pass_through_quorum_store.rs  test_quorum_store.rs
(+10 files in other folders)
